k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notification
  labels:
    name: notification
    environment: production
